tests/samples/invalid/missing_label.pn
fn main()
{
	var x = 33;

	goto foo;

	x = 100;

	return:
	x
}
